orders-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-frontend
  namespace: microservices-workshop
spec:
  selector:
    app: orders-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
